WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212017
REGRESSION(
r261779
): [GTK][WPE] http/tests/resourceLoadStatistics/third-party-cookie-blocking-ephemeral.html is failing
https://bugs.webkit.org/show_bug.cgi?id=212017
Summary
REGRESSION(r261779): [GTK][WPE] http/tests/resourceLoadStatistics/third-party...
Diego Pino
Reported
2020-05-18 04:40:37 PDT
These two tests are failing since
r261779
: http/tests/resourceLoadStatistics/third-party-cookie-blocking-ephemeral-database.html [ Failure ] http/tests/resourceLoadStatistics/third-party-cookie-blocking-ephemeral.html [ Failure ] I think the problem is that the creation of the default website datatore should taking into account the options.useEphemeralSession. Diff:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r261798%20(13758)/http/tests/resourceLoadStatistics/third-party-cookie-blocking-ephemeral-diff.txt
--- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/http/tests/resourceLoadStatistics/third-party-cookie-blocking-ephemeral-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/http/tests/resourceLoadStatistics/third-party-cookie-blocking-ephemeral-actual.txt @@ -3,7 +3,6 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS Resource load statistics is running in ephemeral mode. PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch
(4.11 KB, patch)
2020-07-03 03:08 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-07-03 03:08:49 PDT
Created
attachment 403448
[details]
Patch
Carlos Garcia Campos
Comment 2
2020-07-03 07:32:04 PDT
Committed
r263895
: <
https://trac.webkit.org/changeset/263895
>
Radar WebKit Bug Importer
Comment 3
2020-07-03 07:33:13 PDT
<
rdar://problem/65076443
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug