REGRESSION(r261779): [GTK][WPE] http/tests/resourceLoadStatistics/third-party-cookie-blocking-ephemeral.html is failing https://bugs.webkit.org/show_bug.cgi?id=212017

Reviewed by Michael Catanzaro.

Tools:

Use the ephemeral data store when useEphemeralSession option is enabled.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::platformInitializeDataStore):

LayoutTests:

Remove expectations for tests that are now passing.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/226723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263895 268f45cc-cd09-0410-ab3c-d52691b4dbfc